--- a/views/index.pug
+++ b/views/index.pug
@@ -1,10 +1,3 @@
-doctype html
-html
-	head
-		meta(charset='utf-8')
-		meta(name='viewport', content='width=device-width, initial-scale=1.0')
-		title TGINFO
-		link(rel='stylesheet', type="text/css", href="/css/main.css")
-		block head
-	body
-	a hello
+extends layout
+block body
+	p hello
