separate adminLogin from admin

--- a/views/admin.pug
+++ b/views/admin.pug
@@ -1,17 +1,5 @@
-doctype html
-html(lang='en')
-  head
-    meta(charset='utf8')
-    meta(http-equiv="X-UA-Compatible" content="IE=edge")
-    meta(name="viewport" content="width=device-width, initial-scale=1")
-    title #{title}
-    link(rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous")
-    //link(href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet")
-
-    // main.css 里面有BootStrap
-    link(rel="stylesheet" href="/css/main.css")
-
-body
+extends adminlayout
+block body
   .container
     .row
       .col-md-6
@@ -66,18 +54,3 @@ body
               li 国外分类无效
               li 链接需要加<code>http://</code>或者<code>https://</code>
               li 图片栏分类无效，并按添加时间顺序替换
-        h3 登录
-        include components/message
-        form(action='/admin/login' method='post')
-          div.form-group
-            lable 用户名
-            input.form-control(type='text', name='name')
-          div.form-group
-            lable 密码
-            input.form-control(type='password', name='pass')
-          button.btn.btn-default(type='submit') 提交
-        h3 退出
-        form(action='/admin/logout', method='post')
-          button.btn.btn-default(type='submit') 退出
-  script(src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js")
-  script(src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous")
