--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1,24 +1,6 @@
-#header {
-	background-color: #3ef;
-	padding: 1% 0;
+a:hover {
+	color: black !important;
 }
-
-#contain {
-	margin: 0 auto;
-    width: 100%;
-}
-
-.cell {
-	padding: 1% 0;
-}
-
-#logo {
-	font-size: 2.5em;
-	font-weight: 700;
-	font-family: 'Dancing Script', cursive;
-}
-
-.cell {
-	padding: 10px;
-	margin-left: 50px;
+a:focus {
+	text-decoration: none;
 }
