--- a/views/list.pug
+++ b/views/list.pug
@@ -1,7 +1,7 @@
 extends layout
 block body
   div.center-block 
-    h3 精选网站
+    h3#list 精选网站
   div.row
     - for (let i = 0; i < 3; i++)
         div.col-sm-6.col-md-4
