--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8401,16 +8401,17 @@ template {
 
 .bigBanner {
   width: 100%;
-  height: 600px;
+  height: 510px;
   background-image: url("/img/bigBanner.png");
   background-size: cover;
-  background-position: 50%,50%; }
+  background-position: 0%,50%; }
 
 .smallBanner {
   width: 100%;
-  height: 300px;
+  height: auto;
   background-image: url("/img/bigBanner.png");
-  background-size: cover; }
+  background-size: cover; 
+  background-position: 0%, 50%;}
 
 .musk {
   height: 100%;
@@ -8421,7 +8422,7 @@ template {
   font-size: 60px;
   font-weight: 200;
   color: #f8f8f8;
-  padding-top: 20%;
+  padding-top: 18%;
   text-align: center; }
 
 .banner-intro {
